# project-template-python-pure

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml
_sources/: index.rst.txt  reference.rst.txt
_sources/api/: project_template_python_pure.fibonacci.rst.txt
_static/: documentation_options.js
api/: project_template_python_pure.fibonacci.html
docs/: conf.py  index.rst  installation.rst  reference.rst
src/project_template_python_pure/: __init__.py  version.py
src/project_template_python_pure/tests/: test_version.py
src/template/: __init__.py
src/template/cli/: fib.py
src/template/tests/: test_version.py
