[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "project-template-python-pure"
description = "Template for a pure python package"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Maximilian Linhoff", email = "maximilian.linhoff@tu-dortmund.de"},
]

requires-python = ">=3.8"
dependencies = [
    "numpy",
]

# needed for setuptools_scm, we don't define a static version
dynamic = ["version"]

[project.urls]
repository = "https://github.com/cta-observatory/project-template-python-pure"

[project.scripts]
fibonacci = "template.cli.fib:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["template._dev_version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
doc = [
  "sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
]
dev = [
  "setuptools_scm",
]

# unfortunately, there is no way (yet) to generate this automatically using pyproject.toml
all = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
  "setuptools_scm",
]

[tool.setuptools_scm]
write_to = 'src/template/_version.py'

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
