[metadata]
name = project_template_python_pure
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/cta-observatory/project-template-python-pure
description = Template for a pure python package
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
	= src
python_requires = >=3.8

[options.packages.find]
where = src
exclude = project_template_python_pure._dev_version

[options.extras_require]
tests =
  pytest
  pytest-cov

# provide an "all" extra for convenience for users that
# includes all optional dependencies, e.g. to run the tests
all =
  %(tests)s

docs =
  sphinx ~= 5.0
  pydata-sphinx-theme
  sphinx_automodapi
  numpydoc

# and one for developers that includes even more
dev =
  %(all)s
  %(docs)s
  setuptools_scm
